# argent

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .pylintrc  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: pre-commit.yml
.scripts/: bootstrap.sh
backend/: .flaskenv  README.md  pyproject.toml  tox.ini
backend/migrations/versions/: 96d99331a993_force_name_to_create_a_new_flower.py  f99c40fae9f0_add_basic_user_model.py
backend/oxide/: __init__.py
backend/oxide/api_v0/: __init__.py  routes.py
backend/oxide/auth/: __init__.py  routes.py  user.py
backend/oxide/basic_features/: __init__.py  routes.py
backend/oxide/cli/: __init__.py  test.py
backend/oxide/core/: __init__.py  config_skeleton.py  constants.py  database.py  extensions.py  handlers.py  integrations.py
backend/oxide/flower/: __init__.py  models.py  routes.py
backend/oxide/welcome/: __init__.py  greeting.py  routes.py
backend/tests/: conftest.py
backend/tests/core/: test_fixture_creation.py  test_fixtures.py  test_flask_application_factory.py  test_oxide.py
backend/tests/welcome/: test_routes.py
