[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "oxide"
version = "0.0.0"
description = ""
authors = ["Richard <richard.pavis@gmail.com>"]
maintainers = ["Richard <richard.pavis@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/TheBlueFool/argent"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "==1.1.2"
flask-marshmallow = ">=0.11, <0.12"
Flask-Migrate = ">=2.5, <2.6"
Flask-SQLAlchemy = ">=2.4, <2.5"
marshmallow = ">=3.5, <3.6"
marshmallow-sqlalchemy = ">=0.22, <0.23"
SQLAlchemy = ">=1.3, <1.4"
psycopg2-binary = ">=2.8, <2.9"



[tool.poetry.dev-dependencies]
tox = "~3.14.6"
pytest = "~5.4.1"
pylint = "~2.4.4"
black = "==19.10b0"
factory-boy = "~2.12.0"
pytest-cov = "~2.8.1"
pytest-flask = "~1.0.0"
pytest-flask-sqlalchemy = "~1.0.2"
pytest-xdist = "~1.31.0"
coverage = "<5"
python-dotenv = "~0.12.0"
pytest-watch = "~4.2.0"
flake8 = "~3.7.9"
